# netcity

./: LICENSE  Makefile  Procfile  app_install.py  app_release_module_install.py  app_release_module_uninstall.py  app_uninstall.py  pyproject.toml  requirements.txt  upload.sh
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: app_release.py  attachments.py  rent_house.py  telegram_user.py
app/auth/: api_key.py
app/crud/: app_release.py  rent_house.py  telegram_user.py
app/models/: __init__.py  app_release.py  rent_house.py  telegram_user.py
config/: __init__.py
core/crud/: action_window.py  attachment.py  menu.py  model.py  model_access.py  model_field.py  view.py
core/errors/: __init__.py  odoo_exception.py
core/models/: __init__.py  action_window.py  attachment.py  menu.py  model.py  model_access.py  model_field.py  version.py  view.py
core/odoorpc/: __init__.py
core/utils/: __init__.py
install/actions/: x_app_release_action.py  x_rent_house_action.py  x_telegram_user_action.py
install/menus/: netcity_menu.py  x_app_release_menu.py  x_rent_house_menu.py  x_telegram_user_menu.py
install/models/: x_app_release.py  x_rent_house.py  x_telegram_user.py
install/views/: x_app_release_view.py  x_rent_house_view.py  x_telegram_user_view.py
install/views/xml/: x_app_release_form.xml  x_app_release_tree.xml  x_rent_house_form.xml  x_rent_house_tree.xml  x_telegram_user_form.xml  x_telegram_user_tree.xml
test/: __init__.py  crud_test.py  odoorpc_test.py
