[tool.poetry]
name = "gaonet"
version = "0.1.0"
description = ""
authors = ["Luis Antonio Correa Leyva <correaleyval@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
python-dotenv = "^0.17.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
